# Something

./: CMakeLists.txt  main.c  of min and max elements
libs/: CMakeLists.txt
libs/algorithms/: CMakeLists.txt  algorithm.c  algorithm.h
libs/algorithms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/sort_functions/: sort_functions.c  sort_functions.h
libs/data_structures/vector/: vector.c  vector.h
libs/string/: string_.h
libs/string/tasks/: amountOfPalindromes.h  areWordsOrdered.h  digitToStartTransform.h  getMixedString.h  getStringWithReversedWords.h  hasEqualWords.h  lastWordInFirstStringInSecondString.h  outputReversedString.h  printWordBeforeFirstWordWithA.h  removeNonLetters.h  replace.h
libs/strings/: string_.c  string_.h
libs/strings/tasks/: amountOfPalindromes.c  amountOfPalindromes.h  areWordsOrdered.c  areWordsOrdered.h  digitToStartTransform.c  digitToStartTransform.h  getMixedString.c  getMixedString.h  getStringWithReversedWords.c  getStringWithReversedWords.h  hasEqualWords.h  lastWordInFirstStringInSecondString.c  lastWordInFirstStringInSecondString.h  outputReversedString.c  outputReversedString.h  printWordBeforeFirstWordWithA.c  printWordBeforeFirstWordWithA.h  removeExtraSpaces.c  removeExtraSpaces.h  removeNonLetters.c  removeNonLetters.h  replace.h  replaceDigitsBySpaces.c  replaceDigitsBySpaces.h  void printWordBeforeFirstWordWithA.c  void printWordBeforeFirstWordWithA.h
